--- a/main.html
+++ b/main.html
@@ -7,7 +7,37 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<div class="container" style="max-width:600px; border:5px solid rgb(4,255,4); background:rgb(41,0,0); margin-top:30px;">
+    <!-- Row 1 -->
+    <div class="row" style="border:5px solid rgb(255,188,188); height:200px;">
+      <div class="col-6 col-md-4" style="border:2px dotted rgb(38,38,43); background:teal;">
+        Row1 col1
+      </div>
+      <div class="col-6 col-md-8" style="border:2px dotted rgb(38,38,43); background:thistle;">
+        Row1 col2
+      </div>
+    </div>
+
+    <!-- Row 2 -->
+    <div class="row" style="border:5px solid rgb(255,188,188); height:200px;">
+      <div class="col-6 col-md-4 offset-md-2" style="border:2px dotted rgb(38,38,43); background:tomato;">
+        Row2 col1
+      </div>
+      <div class="col-6 col-md-4" style="border:2px dotted rgb(38,38,43); background:turquoise;">
+        Row2 col2
+      </div>
+    </div>
+
+    <!-- Row 3 -->
+    <div class="row justify-content-center" style="border:5px solid rgb(255,188,188); height:200px;">
+      <div class="col-6 col-md-4" style="border:2px dotted rgb(38,38,43); background:violet;">
+        Row3 col1
+      </div>
+      <div class="col-6 col-md-4" style="border:2px dotted rgb(38,38,43); background:yellowgreen;">
+        Row3 col2
+      </div>
+    </div>
+  </div>
     <script type="text/javascript" src="./script.js">
 </script>
 
