--- a/main.html
+++ b/main.html
@@ -7,40 +7,41 @@
 </head>
 
 <body>
-	<div class="container" style="max-width:600px; border:5px solid rgb(4,255,4); background:rgb(41,0,0); margin-top:30px;">
-    <!-- Row 1 -->
-    <div class="row" style="border:5px solid rgb(255,188,188); height:200px;">
-      <div class="col-6 col-md-4" style="border:2px dotted rgb(38,38,43); background:teal;">
-        Row1 col1
-      </div>
-      <div class="col-6 col-md-8" style="border:2px dotted rgb(38,38,43); background:thistle;">
-        Row1 col2
-      </div>
-    </div>
+	<div class="container custom-container">
 
-    <!-- Row 2 -->
-    <div class="row" style="border:5px solid rgb(255,188,188); height:200px;">
-      <div class="col-6 col-md-4 offset-md-2" style="border:2px dotted rgb(38,38,43); background:tomato;">
-        Row2 col1
-      </div>
-      <div class="col-6 col-md-4" style="border:2px dotted rgb(38,38,43); background:turquoise;">
-        Row2 col2
-      </div>
+  <!-- Row 1 -->
+  <div class="row custom-row">
+    <div class="col-md-4 col-sm-6 custom-col row1-col1">
+      Row1 col1
     </div>
-
-    <!-- Row 3 -->
-    <div class="row justify-content-center" style="border:5px solid rgb(255,188,188); height:200px;">
-      <div class="col-6 col-md-4" style="border:2px dotted rgb(38,38,43); background:violet;">
-        Row3 col1
-      </div>
-      <div class="col-6 col-md-4" style="border:2px dotted rgb(38,38,43); background:yellowgreen;">
-        Row3 col2
-      </div>
+    <div class="col-md-8 col-sm-6 custom-col row1-col2">
+      Row1 col2
     </div>
   </div>
-    <script type="text/javascript" src="./script.js">
-</script>
 
+  <!-- Row 2 -->
+  <div class="row custom-row">
+    <div class="col-md-4 offset-md-2 col-sm-6 custom-col row2-col1">
+      Row2 col1
+    </div>
+    <div class="col-md-4 col-sm-6 custom-col row2-col2">
+      Row2 col2
+    </div>
+  </div>
+
+  <!-- Row 3 -->
+  <div class="row justify-content-center custom-row">
+    <div class="col-md-4 col-sm-6 custom-col row3-col1">
+      Row3 col1
+    </div>
+    <div class="col-md-4 col-sm-6 custom-col row3-col2">
+      Row3 col2
+    </div>
+  </div>
+
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
