--- a/main.html
+++ b/main.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Bootstrap Grid Layout</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-	<div class="container custom-container">
+
+<div class="container custom-container">
 
   <!-- Row 1 -->
   <div class="row custom-row">
@@ -31,10 +33,10 @@
 
   <!-- Row 3 -->
   <div class="row justify-content-center custom-row">
-    <div class="col-md-4 col-sm-6 custom-col row3-col1">
+    <div class="col-md-4 col-sm-6 custom-col row3-col1 r3c1">
       Row3 col1
     </div>
-    <div class="col-md-4 col-sm-6 custom-col row3-col2">
+    <div class="col-md-4 col-sm-6 custom-col row3-col2 r3c2">
       Row3 col2
     </div>
   </div>
@@ -43,5 +45,4 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
