--- a/main.html
+++ b/main.html
@@ -13,20 +13,20 @@
 
   <!-- Row 1 -->
   <div class="row custom-row">
-    <div class="col-md-4 col-sm-6 custom-col row1-col1">
+    <div class="col-md-4 col-sm-6 custom-col row1-col1 r1c1">
       Row1 col1
     </div>
-    <div class="col-md-8 col-sm-6 custom-col row1-col2">
+    <div class="col-md-8 col-sm-6 custom-col row1-col2 r1c2">
       Row1 col2
     </div>
   </div>
 
   <!-- Row 2 -->
-  <div class="row custom-row">
-    <div class="col-md-4 offset-md-2 col-sm-6 custom-col row2-col1">
+  <div class="row justify-content-between custom-row">
+    <div class="col-md-4 offset-md-2 col-sm-6 custom-col row2-col1 r2c1">
       Row2 col1
     </div>
-    <div class="col-md-4 col-sm-6 custom-col row2-col2">
+    <div class="col-md-4 col-sm-6 custom-col row2-col2 r2c2">
       Row2 col2
     </div>
   </div>
